/*
 * Copyright 2021, TeamDev. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
syntax = "proto3";

package spine.test.validation.option;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_multiple_files = true;
option java_outer_classname = "TestFieldOptionProto";
option java_package = "io.spine.test.validate.option";

import "google/protobuf/descriptor.proto";

message ATestMessage {

    string value = 1 [(max_length) = 3];
}
message NoValidationTestMessage {

    string value = 1;
}

message ATestMessageWithConstraint {

    ATestMessage message = 1 [(validate) = true];

    string value = 2;
}

message ATestMessageWithExternalConstraintOnly {

    NoValidationTestMessage message = 1;
}

message ATestMessageConstraint {
    option (constraint_for) = "spine.test.validation.option.ATestMessageWithConstraint.message,"
                              "spine.test.validation.option.ATestMessageWithExternalConstraintOnly.message";

    string value = 1 [(max_length) = 5];
}

extend google.protobuf.FieldOptions {

    // A test-only option that should be applied only to string fields to determine their maximum
    // length in characters.
    uint32 max_length = 74934;
}
